# bitwise_spgemm

./: Makefile  a.out  bit_wise_gemm.cu  sgemm.cu  sgemm.ncu-rep
backup/: Makefile  cublas.cu  exp.cu  layout_trans.cu  naive_sgemm.cu
profiling_results/: replace_mul_with_add_result.ncu-rep  result.ncu-rep
release/: CMakeCache.txt  Makefile  cmake_install.cmake
release/src/: Makefile  cmake_install.cmake
source/: CMakeLists.txt  test  test.cu
source/src/: CMakeLists.txt  common.h  cuda_utils.cuh  main.cu  mm.cu  mm.h  transform.cuh  utils.h
src/: a.out  common.h  main  main.cu  main.cudafe1.c  main.cudafe1.gpu  main.cudafe1.stub.c  main.fatbin  main.fatbin.c  main.module_id  main.ptx  main.sm_52.cubin  main_dlink.fatbin  main_dlink.fatbin.c  test  test.cu  transform.cuh  utils.h
